What's Different in Razor Pages

--- a/BookWebRazor_Temp/appsettings.json
+++ b/BookWebRazor_Temp/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  //Section name
+  "ConnectionStrings": {
+    //Key value
+    "DefaultConnection": "Server=DESKTOP-HMLP3JP\\SQLEXPRESS;Database=Book_Razor;Trusted_Connection=True;TrustServerCertificate=True"
+  }
 }
