--- a/BookWeb/appsettings.json
+++ b/BookWeb/appsettings.json
@@ -6,9 +6,8 @@
     }
   },
   "AllowedHosts": "*",
-  //Section name
   "ConnectionStrings": {
-    //Key value
-    "DefaultConnection": "Server=DESKTOP-HMLP3JP\\SQLEXPRESS;Database=Book;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=DESKTOP-HMLP3JP\\SQLEXPRESS;Database=Book;Trusted_Connection=True;TrustServerCertificate=True",
+    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=BookWeb;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
