--- a/BookWeb/appsettings.json
+++ b/BookWeb/appsettings.json
@@ -7,7 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-HMLP3JP\\SQLEXPRESS;Database=Book;Trusted_Connection=True;TrustServerCertificate=True",
-    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=BookWeb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-HMLP3JP\\SQLEXPRESS;Database=Book;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
